--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "clear && node dist/index.js $1",
     "integration": "clear; npm run build && mocha --harmony ./dist/test/integration/**/*.js",
     "unit": "clear; mocha --harmony .dist/test/unit/**/*.js",
-    "test": "clear; mocha --harmony ./dist/test/**/lendroid.js",
+    "test": "clear; mocha --harmony ./dist/test/**/*.js",
     "watch": "rm -rf ./dist && tsc --watch"
   },
   "author": "Faizan Ali",
@@ -19,10 +19,12 @@
   "dependencies": {
     "chalk": "^2.4.1",
     "htmlparser2": "^3.9.2",
-    "node-fetch": "^2.1.2"
+    "node-fetch": "^2.1.2",
+    "typescript": "^2.9.2"
   },
   "devDependencies": {
     "@types/chalk": "^2.2.0",
+    "@types/htmlparser2": "^3.7.31",
     "@types/node": "^10.3.3",
     "@types/node-fetch": "^2.1.1",
     "nodemon": "^1.17.5",
