--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "quickwiki",
-  "version": "0.0.1",
-  "description": "",
-  "main": "index.js",
+  "version": "0.0.2",
+  "description": "Script to read a Wiki page extract in the shell w/ menu navigation to sections",
+  "main": "init.js",
   "scripts": {
-    "build": "rm -rf ./dist; tsc",
     "clean": "rm -rf node_modules ",
     "clean-install": "npm run clean && npm install",
     "lint": "tslint './src/**/*.ts' -p . -c tslint.json",
@@ -28,7 +27,6 @@
     "@types/htmlparser2": "^3.7.31",
     "@types/node": "^10.3.3",
     "@types/node-fetch": "^2.1.1",
-    "nodemon": "^1.17.5",
     "tslint": "^5.10.0"
   }
 }
