--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "quickwiki",
+  "name": "quickwikip",
   "version": "0.0.2",
   "description": "Script to read a Wiki page extract in the shell w/ menu navigation to sections",
   "main": "index.js",
+  "repository": "https://github.com/faizan-ali/quickwiki",
   "scripts": {
     "clean": "rm -rf node_modules ",
     "clean-install": "npm run clean && npm install",
@@ -19,7 +20,6 @@
     "chalk": "^2.4.1",
     "htmlparser2": "^3.9.2",
     "node-fetch": "^2.1.2",
-    "readline": "^1.3.0",
     "terminal-kit": "^1.17.11",
     "typescript": "^2.9.2"
   },
